refactor: JDK 21의 새로운 기능을 사용해봐라
OutputView.java: JDK 21부터 List 인터페이스가 SequencedCollection 인터페이스를 상속받으면서 addFirst, getFirst, removeFirst, reversed 메서드를 사용할 수 있게 되어 우승 자동차 이름을 가져오는 부분에서 사용했다.
RacingGameController.java: getWinner() 메서드를 간결하게 수정했다.